--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,7 @@ android {
         targetSdkVersion 30
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -25,6 +25,10 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+    }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8.toString()
@@ -41,9 +45,9 @@ def roomVersion = '2.2.6'
 def glideVersion = '4.12.0'
 def supportVersion = '28.0.0'
 def preferencesVersion = '1.1.1'
-def lifeCycleExtensionVersion = '2.2.1'
+def lifeCycleExtensionVersion = '2.2.0'
 def coroutines_version = '1.3.7'
-def hilt_version = '2.32-alpha'
+def hilt_version = '2.28-alpha'
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
